fix line wrapping of inline code blocks

--- a/static/style.css
+++ b/static/style.css
@@ -71,6 +71,7 @@ pre code {
   margin: 0.5em 0;
   overflow-x: auto;
   overflow-y: hidden;
+  display: inline-block;
 }
 
 article pre {
@@ -86,6 +87,7 @@ article code {
 
 article p code {
   padding: 0;
+  display: inline;
 }
 
 hr {
